--- a/index.ipynb
+++ b/index.ipynb
@@ -85,22 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "friends"
+    "friends = {'name': 'Friends', 'genre':'sitcom', 'no_of_seasons':10}"
    ]
   },
   {
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
